# opencv_sender

opencv-test-cl/: CMakeLists.txt  main.cpp
opencv_sr/: CMakeLists.txt  main.cpp
